--- a/LAB.ipynb
+++ b/LAB.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "LAB.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM041QWG71WHQD3j4G9opcP",
+      "authorship_tag": "ABX9TyOzLtubvDbN8ILDxdCLL8gH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,7 +84,7 @@
         "colab_type": "text"
       },
       "source": [
-        "![Utility Knife Icon](https://raw.githubusercontent.com/JosephMiller12/Practice/master/Images/utility-knife.ico)"
+        "![Matthew Alright](https://raw.githubusercontent.com/JosephMiller12/Practice/master/Images/Danny.jpg)"
       ]
     }
   ]
