--- a/LAB.ipynb
+++ b/LAB.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "LAB.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "authorship_tag": "ABX9TyOzLtubvDbN8ILDxdCLL8gH",
       "include_colab_link": true
     },
