--- a/LAB.ipynb
+++ b/LAB.ipynb
@@ -6,7 +6,7 @@
       "name": "LAB.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOzLtubvDbN8ILDxdCLL8gH",
+      "authorship_tag": "ABX9TyNIIMnQWsGe6feYN0avkp00",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_L6ThMuNHT0z",
+        "colab_type": "text"
+      },
+      "source": [
+        "Joseph Miller IST 210 9/1/**2020**"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -85,7 +95,7 @@
         "colab_type": "text"
       },
       "source": [
-        "![Matthew Alright](https://raw.githubusercontent.com/JosephMiller12/Practice/master/Images/Danny.jpg)"
+        "![Danny](https://raw.githubusercontent.com/JosephMiller12/Practice/master/Images/Danny.jpg)"
       ]
     }
   ]
