--- a/LAB.ipynb
+++ b/LAB.ipynb
@@ -6,7 +6,7 @@
       "name": "LAB.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNIIMnQWsGe6feYN0avkp00",
+      "authorship_tag": "ABX9TyOjo8V0ezYpl9RbswrmJNiB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +65,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Yes, I enjoy using Jupyter Notebooks. The program has a clean look and is intuitive to use. I like google drive and most programs associated with it, because it is a simple way to store and organize my work on the web. "
+        "Yes, I enjoy using Jupyter Notebooks. The program has a clean look and is intuitive to use. I like google drive and most programs associated with it, because it is a simple way to store and organize my work on the web. A bug I have faced in trying to submit this assignment is that recent updates to the notebook are not carried over when I paste the link and view in Nbviewer. "
       ]
     },
     {
