--- a/LAB2.ipynb
+++ b/LAB2.ipynb
@@ -6,7 +6,7 @@
       "name": "LAB2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNfzta/4+jHw8u/6L7aOsO5",
+      "authorship_tag": "ABX9TyPkRwMNgfE9Eor/3ntBDzuB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
         "id": "IhX0iebhCh0n"
       },
       "source": [
-        "![LAB 2](https://raw.githubusercontent.com/JosephMiller12/Practice/master/Images/Lab%202_%20Pet%20Shop%20ER%20Diagram%20(2).png)"
+        "![LAB2](https://raw.githubusercontent.com/JosephMiller12/Practice/master/Images/LAB2.png)"
       ]
     },
     {
